Parse .conf files

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -15,9 +15,11 @@ COPY ../. .
 
 # Compile the source code
 RUN clang++ -std=c++20 -I./include -o test \
+    src/config/Config.cpp \
     src/config/Directive.cpp \
     src/config/Lexer.cpp \
     src/config/Parser.cpp \
+    tests/config/config_tests.cpp \
     tests/config/lexer_tests.cpp \
     tests/config/parser_tests.cpp \
     -lgtest -lgtest_main -pthread
