Add Value 'getter' for directives

--- a/tests/conf/test.conf
+++ b/tests/conf/test.conf
@@ -4,5 +4,9 @@ http {
     server {
         server_name localhost;
         listen 8080;
+
+        root /www;
+
+        error_page 404 /404.html;
     }
 }
