--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -18,9 +18,11 @@ RUN clang++ -std=c++20 -I./include -o test \
     src/config/Config.cpp \
     src/config/Lexer.cpp \
     src/config/Parser.cpp \
+    src/http/Request.cpp \
     tests/config/config_tests.cpp \
     tests/config/lexer_tests.cpp \
     tests/config/parser_tests.cpp \
+    tests/http/request_tests.cpp \
     -lgtest -lgtest_main -pthread
 
 # Run the tests
