--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,1 +1,15 @@
 log_level debug;
+
+http {
+    server {
+        listen 8080;
+        server_name localhost;
+
+        error_page 404 /error/404.html;
+
+        location / {
+            root /var/www/html;
+            index index.html;
+        }
+    }
+}
