--- a/conf/default.conf
+++ b/conf/default.conf
@@ -6,6 +6,7 @@ http {
         server_name localhost;
 
         error_page 404 /error/404.html;
+        error_page 400 505 /error/400.html;
 
         location / {
             root /var/www/html;
