Use Request root directory

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -9,7 +9,7 @@ http {
         error_page 400 505 /error/400.html;
 
         location / {
-            root /var/www/html;
+            root www/default;
             index index.html;
         }
     }
