--- a/tests/conf/test.conf
+++ b/tests/conf/test.conf
@@ -5,7 +5,13 @@ http {
         server_name localhost;
         listen 8080;
 
-        root /www;
+        location /e/ {
+            root /www/errors;
+        }
+
+        location / {
+            root /www;
+        }
 
         error_page 404 /404.html;
     }
