--- a/tests/conf/e2e.conf
+++ b/tests/conf/e2e.conf
@@ -5,4 +5,25 @@ http {
 
         root tests/www;
     }
+
+    server {
+        server_name localhost1;
+        listen 8080;
+
+        root tests/www/1;
+    }
+
+    server {
+        server_name localhost2;
+        listen 8080;
+
+        root tests/www/2;
+    }
+
+    server {
+        server_name localhost;
+        listen 8081;
+
+        root tests/www;
+    }
 }
