--- a/tests/conf/location.conf
+++ b/tests/conf/location.conf
@@ -1,17 +1,17 @@
-log_level crit;
-
 http {
     server {
         server_name localhost;
         listen 8080;
 
-        location /e/ {
-            root /www/errors;
+        location /1 {
+            root /www;
             index index.html;
+            autoindex on;
         }
 
-        location / {
-            root /www;
+        location /2 {
+            root /www/2;
+            index index.php;
         }
 
         error_page 404 /404.html;
