--- a/tests/conf/iterator.conf
+++ b/tests/conf/iterator.conf
@@ -14,6 +14,16 @@ http {
             root /www;
         }
 
+        index index.html;
+
+        location / {
+            root /www;
+        }
+
         error_page 404 /404.html;
+
+        location / {
+            root /www;
+        }
     }
 }
