--- a/conf/default.conf
+++ b/conf/default.conf
@@ -8,6 +8,11 @@ http {
         error_page 404 /error/404.html;
         error_page 400 505 /error/400.html;
 
+        location /upload/ {
+            root www/default;
+            upload_dir www/default/upload/;
+        }
+
         location / {
             root www/default;
             index index.html;
