--- a/tests/conf/e2e.conf
+++ b/tests/conf/e2e.conf
@@ -4,6 +4,10 @@ http {
         listen 8080;
 
         root tests/www;
+
+        location /upload/ {
+            upload_dir tests/www/upload/;
+        }
     }
 
     server {
