Add tests for directory listing

--- a/tests/conf/e2e.conf
+++ b/tests/conf/e2e.conf
@@ -4,6 +4,10 @@ http {
         listen 8080;
 
         root tests/www;
+
+        location /1/ {
+            autoindex on;
+        }
     }
 
     server {
