Support DELETE method

--- a/tests/conf/e2e.conf
+++ b/tests/conf/e2e.conf
@@ -12,6 +12,10 @@ http {
         location /1/ {
             autoindex on;
         }
+
+        location /2/ {
+            index hello.html;
+        }
     }
 
     server {
