--- a/conf/default.conf
+++ b/conf/default.conf
@@ -11,6 +11,7 @@ http {
         location /upload/ {
             root www/default;
             upload_dir www/default/upload/;
+			autoindex on;
         }
 
         location / {
