Limit body size to client_max_body_size directive

--- a/tests/conf/e2e.conf
+++ b/tests/conf/e2e.conf
@@ -1,3 +1,5 @@
+log_level debug;
+
 http {
     server {
         server_name localhost;
@@ -15,6 +17,7 @@ http {
 
         location /2/ {
             index hello.html;
+            client_max_body_size 10;
         }
     }
 
