Limit allowed HTTP methods inside a location using the limit_except directive

--- a/tests/conf/e2e.conf
+++ b/tests/conf/e2e.conf
@@ -19,6 +19,11 @@ http {
             index hello.html;
             client_max_body_size 10;
         }
+
+        location /3/ {
+            index hello.html;
+            limit_except GET;
+        }
     }
 
     server {
