Bind server to address from 'listen' directive

--- a/tests/conf/test.conf
+++ b/tests/conf/test.conf
@@ -3,7 +3,7 @@ log_level crit;
 http {
     server {
         server_name localhost;
-        listen 8080;
+        listen 8080 127.0.0.1;
 
         location /e/ {
             root /www/errors;
