Implement redirect based on 'return' directive

--- a/tests/conf/e2e.conf
+++ b/tests/conf/e2e.conf
@@ -22,6 +22,10 @@ http {
             index hello.html;
             limit_except GET;
         }
+
+        location /redirect {
+            return 301 /redirected.html;
+        }
     }
 
     server {
